# cnote

./: CMakeLists.txt  Doxyfile  Readme.md
include/: CnoteCommand.h  CnoteConfig.h  CnoteError.h  Executor.h
include/Executor/: CreateExecutor.h  HelpExecutor.h  ListExecutor.h  LoginExecutor.h  OpenExecutor.h  RegisterExecutor.h  RemoveExecutor.h  ShowExecutor.h
include/Helpers/: ErrorPrinter.h  ListFormater.h  NoteChecker.h  NoteHelper.h  UserHelper.h
include/Infra/: Directory.h  FileHelper.h  Option.h  OptionSet.h  StrVector.h  String.h
src/: CnoteCommand.c  CnoteConfig.c  CnoteError.c  Executor.c  main.c
src/Executor/: CreateExecutor.c  HelpExecutor.c  ListExecutor.c  LoginExecutor.c  OpenExecutor.c  RegisterExecutor.c  RemoveExecutor.c  ShowExecutor.c
src/Helpers/: ErrorPrinter.c  ListFormater.c  NoteChecker.c  NoteHelper.c  UserHelper.c
src/Infra/: Directory.c  FileHelper.c  Option.c  StrVector.c  String.c
test/: StringTest.c  VectorTest.c
test/option_test/: TestExecutors.h
